--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,6 +22,6 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:21.0.3'
-    compile files('D:/Dropbox/Android/EasyPacks/libs/Parse-1.8.2.jar')
-    compile files('D:/Dropbox/Android/EasyPacks/libs/bolts-android-1.1.4.jar')
+    compile files('libs/bolts-android-1.1.4.jar')
+    compile files('libs/Parse-1.8.2.jar')
 }
